k8s-templates/ingress/ingress.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: ingress
  annotations:
    nginx.ingress.kubernetes.io/enable-cors: "true"
    nginx.ingress.kubernetes.io/cors-allow-methods: "PUT, GET, POST, OPTIONS"
    nginx.ingress.kubernetes.io/cors-allow-origin: "*"
    nginx.ingress.kubernetes.io/cors-allow-credentials: "true"
    nginx.ingress.kubernetes.io/cors-allow-headers: "Content-Type"
    nginx.ingress.kubernetes.io/proxy-connect-timeout: "300"
    nginx.ingress.kubernetes.io/proxy-read-timeout: "300"
    nginx.ingress.kubernetes.io/proxy-send-timeout: "300"
    nginx.ingress.kubernetes.io/proxy-body-size: 20m
    nginx.ingress.kubernetes.io/rewrite-target: "/$2"
spec:
  rules:
  - host: supply-chain-network.local
    http:
      paths:
      - path: /cli-regulatory-department(/|$)(.*)
        backend:
          serviceName: cli-regulatory-department
          servicePort: 3000
      - path: /cli-producer(/|$)(.*)
        backend:
          serviceName: cli-producer
          servicePort: 3000
      - path: /cli-manufacturer(/|$)(.*)
        backend:
          serviceName: cli-manufacturer
          servicePort: 3000
      - path: /cli-deliverer(/|$)(.*)
        backend:
          serviceName: cli-deliverer
          servicePort: 3000
      - path: /cli-retailer(/|$)(.*)
        backend:
          serviceName: cli-retailer
          servicePort: 3000
